Removed the greek flags to make it easier on the eye

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         
     </div>
     <div class="container2">
-        <div class="content2"><h1>🇬🇷 Come, and visit Greece 🇬🇷 </h1></div>
+        <div class="content2"><h1>Come and visit Greece</h1></div>
     </div>
     <div class="container3">
         <div class="content3">
