Added CTA container & btn - added styling as well.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class="container4">
         <div class="content4">
             <h1>Greece - Where Time and Soul Meet</h1>
-            <p>Greece is a land of ancient wisdom and timeless beauty. Walk where philosophers once pondered, feel the echoes of history in marble ruins, and lose yourself in sunlit islands where the sky meets the endless blue sea. Life slows down here—savored in simple moments, in the warmth of the people, in the taste of fresh olives and wine. Greece is not just a place to visit; it is a place to feel, to reflect, to dream. Let its myth, history, and beauty awaken something eternal within you.</p>
+            <p>"Greece is a land of ancient wisdom and timeless beauty. Walk where philosophers once pondered, feel the echoes of history in marble ruins, and lose yourself in sunlit islands where the sky meets the endless blue sea. Life slows down here—savored in simple moments, in the warmth of the people, in the taste of fresh olives and wine. Greece is not just a place to visit; it is a place to feel, to reflect, to dream. Let its myth, history, and beauty awaken something eternal within you."</p>
         </div>
     </div>
 
