Added CTA container & btn | styling added as well

--- a/index.html
+++ b/index.html
@@ -57,10 +57,20 @@
         </div>
     </div>
 
+    <div class="cta-container">
+        <div class="blue-box">
+        <div class="cta-content">
+            <h1>Don't miss out on the best content!</h1>
+            <p>Sign up to our newsletter and get exclusive deals and promotions. There might just even be a surprise for you.</p>
+        </div>
+        <button class="sign-up-button-bottom">Sign up</button>
     </div>
-
+</div>
 
 </div>
+
+
+
 
 
 
