Finalized html+styling, ready for launch!

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <div class="header">
         <div class="logo">TRAVELZᯓ ✈︎</div>
         <div class="links-right">
-            <a>Group tours</a>
-            <a>Surprise me</a>
-            <a>About</a>
-            <a>Home</a>
+            <a href="#">Group tours</a>
+            <a href="#">Surprise me</a>
+            <a href="#">About</a>
+            <a href="#">Home</a>
         </div>
     </div>
     <div class="container1">
@@ -60,12 +60,15 @@
     <div class="cta-container">
         <div class="blue-box">
         <div class="cta-content">
-            <h1>Don't miss out on the best content!</h1>
+            <h1>Don't miss out on the best deals!</h1>
             <p>Sign up to our newsletter and get exclusive deals and promotions. There might just even be a surprise for you.</p>
         </div>
         <button class="sign-up-button-bottom">Sign up</button>
+        </div>
     </div>
-</div>
+    <div class="footer">    
+        Copyright © The Odin Project 2025 | Beks Riquard
+    </div>
 
 </div>
 
