--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
     </div>
     <div class="container3">
         <div class="content3">
-            <img class="mid-image" src="./img/greece-1.jpg" alt="picure of greece">
+            <img class="mid-image" src="./img/tinified/greece-1.jpg" alt="picure of greece">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut a laborum nisi, nam similique eius fuga doloribus aliquam.</p>
             </div>
         <div class="content3">
-            <img class="mid-image" src="./img/greece-2.jpg" alt="picure of greece">
+            <img class="mid-image" src="./img/tinified/greece-2.jpg" alt="picure of greece">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut a laborum nisi, nam similique eius fuga doloribus aliquam.</p>
             </div>
         <div class="content3">
-            <img class="mid-image" src="./img/greece-3.jpg" alt="picure of greece">
+            <img class="mid-image" src="./img/tinified/greece-3.jpg" alt="picure of greece">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut a laborum nisi, nam similique eius fuga doloribus aliquam.</p>
             </div>
         <div class="content3">
-            <img class="mid-image" src="./img/greece-4.jpg" alt="picure of greece">
+            <img class="mid-image" src="./img/tinified/greece-4.jpg" alt="picure of greece">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut a laborum nisi, nam similique eius fuga doloribus aliquam.</p>
             </div>            
         </div>
